; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_spc700.c_check_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_spc700.c_check_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPC_MAGIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca [27 x i32], align 16
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = getelementptr inbounds [27 x i32], [27 x i32]* %4, i64 0, i64 0
  %7 = call i32 @r_buf_read_at(i32* %5, i32 0, i32* %6, i32 108)
  %8 = icmp eq i32 %7, 27
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = getelementptr inbounds [27 x i32], [27 x i32]* %4, i64 0, i64 0
  %11 = load i32, i32* @SPC_MAGIC, align 4
  %12 = call i32 @memcmp(i32* %10, i32 %11, i32 27)
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #1

declare dso_local i32 @memcmp(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
